--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node src/RS.js"
+    "start": "babel-node src/index.js"
   },
   "keywords": [],
   "author": "",
