--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/node": "^7.19.1",
     "@babel/preset-env": "^7.19.3",
     "body-parser": "^1.20.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.1",
     "express": "^4.18.2",
