--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethers": "^5.7.1",
     "express": "^4.18.2",
     "fixparserjs": "^1.0.0",
+    "free-fx": "^1.0.0",
     "fs": "^0.0.1-security",
     "ip": "^2.0.0",
     "mongoose": "^6.6.5"
