--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "4NX Execution Engine",
-  "version": "1.17.1",
-  "description": "",
+  "name": "WDTP Execution Engine",
+  "version": "2.0.0",
+  "description": "In this Update we are Adding another fix session and also updating the current trade Execution so it will support the Multi Currencies like GBP,EUR",
   "main": "index.js",
   "scripts": {
     "start": "babel-node src/index.js"
